--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 (original asm6 changelog in asm16.c)
 
+asm16 x.x x/xx/xx
+ * added TW which takes a word and a string,
+   ORs them and gives the output.
+
+
 asm16 1.7 4/22/17
  * added 65816 instruction set.
  * added 24-bit addressing support.
